@@ -1,3 +1,6 @@
+2009-07-14  Arjen Markus  <arjenmarkus@users.sourceforge.net>
+	* plotaxis.tcl: Added support for formats like %x to label the axes
+
 2009-03-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 	* plotchart.tcl: Solved issue 2683544 (font size leading to clipped labels)
 	* plotpriv.tcl: Ditto
